[tool.poetry]
name = "nrl"
version = "0.1.0"
description = "A project for analysing nrl data."
authors = ["Zach Damcevski"]
readme = "README.md"
package-mode =false

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ipykernel = "^6.29.5"
pylance = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
